<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mdm.restaurantmanagementsystem.ManagementDashboardActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/menu"
        style="@style/DashboardStyle"
        android:text="@string/dashboard_menu"
        android:onClick="openMenu"/>

    <TextView
        android:id="@+id/clockin"
        style="@style/DashboardStyle"
        android:text="@string/dashboard_clockin"
        android:onClick="openClockIn"/>

    <TextView
        android:id="@+id/notes"
        style="@style/DashboardStyle"
        android:text="@string/dashboard_notes"
        android:onClick="openNotes"/>

    <TextView
        android:id="@+id/roster"
        style="@style/DashboardStyle"
        android:text="@string/roster"
        android:onClick="openRoster"/>

    <Button
        android:id="@+id/btSignOut"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_sign_out"/>

</LinearLayout>
