<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mdm.restaurantmanagementsystem.OrderActivity">

    <LinearLayout
        android:id="@+id/orderTopbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tvServrNameHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/server_name_heading" />

        <TextView
            android:id="@+id/tvServerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/server_name" />

        <TextView
            android:id="@+id/tvTableNoHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/table_no_heading"/>

        <Spinner
            android:id="@+id/tablesSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/orderList"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_below="@id/orderTopbar">

        <TextView
            android:id="@+id/tvOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/order_heading"
            android:gravity="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvMenu"
            android:layout_toStartOf="@id/tvOrder"
            android:layout_marginRight="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_heading"
            android:onClick="openMenu"/>

        <ListView
            android:layout_below="@+id/tvOrder"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/list"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/botttomOrderTab"
        android:layout_below="@id/orderList"
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <TextView
            android:id="@+id/tvTotal"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_textview_total"
            android:textSize="23sp"/>

        <TextView
            android:id="@+id/tvTotalPrice"
            android:layout_toEndOf="@id/tvTotal"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_price_string"
            android:textSize="23sp"/>

        <Button
            android:id="@+id/btSubmit"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_button_text"/>

    </RelativeLayout>

</RelativeLayout>
